[project]
name = "dataset-toyota"
version = "0.1.0"
description = ""
authors = [
    {name = "santiago",email = "sosasantiagottc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "dagster (>=1.10.18,<2.0.0)",
    "dagster-webserver (>=1.10.18,<2.0.0)",
    "dbt-core (>=1.9.6,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dagster-airbyte (>=0.26.18,<0.27.0)",
    "dagster-dbt (>=0.26.18,<0.27.0)",
    "dagster-mlflow (>=0.26.18,<0.27.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
